🎯 CRITICAL BUGFIX: Remove user-select: none that was hiding all content
THE BUG: user-select: none on ALL elements made everything invisible!
- Remove toxic CSS rule from index.css
- This was the root cause of the black screen
- Content should be visible now!

--- a/src/index.css
+++ b/src/index.css
@@ -58,13 +58,7 @@ body {
   background-color: var(--surface-base);
 }
 
-/* Text selection */
-* {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
+/* Text selection - FIXED */
 
 p, span, div[class*="text"], h1, h2, h3, h4, h5, h6, .selectable {
   -webkit-user-select: text;
